# bulletproofs

./: Cargo.toml  README.md
.github/workflows/: benchmark.yml  ci.yml
benches/: aggregate_range_bench.rs  bulletproof_bench.rs  circuit_bench.rs  common.rs  ipa_bench.rs  poly_commit_bench.rs  range_bench.rs  test_bench.rs
src/: bulletproof.rs  ipa.rs  lib.rs  msm.rs  range.rs  types.rs  utils.rs  vector_ops.rs
src/circuit/: mod.rs  types.rs  utils.rs
src/ipa/: extended.rs  mod.rs  types.rs  utils.rs
src/poly_commit/: mod.rs  types.rs
src/range/: aggregate.rs  mod.rs  types.rs  utils.rs
