[package]
name = "bulletproofs"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false, features = [ "parallel", "asm" ] }
ark-ec = { version = "0.5.0", default-features = false, features = [ "parallel" ] }
ark-std = { version = "0.5.0", default-features = false, features = [ "parallel" ] }
ark-secp256k1 = { version = "0.5.0" }

nonempty = "0.12"
proptest = "1.7.0"
spongefish = {git = "https://github.com/arkworks-rs/spongefish" , ref = "3ded547", features = ["arkworks-algebra"]}
rand = "0.8"
rayon = "1.11"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3", features = ["formatting"] }
ctor = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "ipa_bench"
harness = false

[[bench]]
name = "range_bench"
harness = false

[[bench]]
name = "aggregate_range_bench"
harness = false

[[bench]]
name = "circuit_bench"
harness = false


[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-secp256k1 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }
