[package]
name = "bulletproofs"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = {version = "0.5.0", features = ["parallel"]}
ark-ff = {version = "0.5.0", features = ["parallel"]}
ark-poly = {version = "0.5.0", features = ["parallel"]}
ark-secp256k1 = "0.5.0"
ark-vesta = "0.5.0"
ark-std = {version = "0.5.0", features = ["parallel"]}
nonempty = "0.12"
proptest = "1.7.0"
spongefish = {git = "https://github.com/arkworks-rs/spongefish" , rev = "cda8c90", features = ["derive", "ark-ff", "ark-ec"] }
rand = "0.8"
rayon = "=1.10"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3", features = ["formatting"] }
ctor = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "ipa_bench"
harness = false

[[bench]]
name = "range_bench"
harness = false

[[bench]]
name = "aggregate_range_bench"
harness = false

[[bench]]
name = "circuit_bench"
harness = false

[[bench]]
name = "poly_commit_bench"
harness = false
